Fixing bug 257690. Make sure to mark the content created for generated content as anonymous content to get the content nodes to do their proper cleanup on document teardown. r+sr=bzbarsky@mit.edu